--- a/index.html
+++ b/index.html
@@ -27,15 +27,38 @@
             <div>
                 <h2 class="banner-sub-title">Hi, I am</h2>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button>Contact</button>
+                <button class="btn-primary">Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
-
     </header>
     <main>
+        <section class="about-me">
+            <h2 class="section-title">About Me</h2>
+            <p class="description">I, m a designer & developer with a passion for web design. I enjoy developing simple,
+                clean and slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional results while working with me. Delivering work within time and budget which meets clients
+                requirements in our mata.</p>
+
+           <section class="more-info">
+            <ul class="info-title">
+                <li>Name:</li>
+                <li>Email:</li>
+                <li>Date of birth:</li>
+                <li>From:</li>
+            </ul>
+            <ul class="info-description">
+                <li>Mary Hard</li>
+                <li>info@gmail.com</li>
+                <li>5 November 1986</li>
+                <li>Los Angeles,USA</li>
+            </ul>
+           </section>
+
+        </section>
 
     </main>
     <footer>
