--- a/index.html
+++ b/index.html
@@ -43,20 +43,50 @@
                 exceptional results while working with me. Delivering work within time and budget which meets clients
                 requirements in our mata.</p>
 
-           <section class="more-info">
-            <ul class="info-title">
-                <li>Name:</li>
-                <li>Email:</li>
-                <li>Date of birth:</li>
-                <li>From:</li>
-            </ul>
-            <ul class="info-description">
-                <li>Mary Hard</li>
-                <li>info@gmail.com</li>
-                <li>5 November 1986</li>
-                <li>Los Angeles,USA</li>
-            </ul>
-           </section>
+            <section class="more-info">
+                <ul class="info-title">
+                    <li>Name:</li>
+                    <li>Email:</li>
+                    <li>Date of birth:</li>
+                    <li>From:</li>
+                </ul>
+                <ul class="info-description">
+                    <li>Mary Hard</li>
+                    <li>info@gmail.com</li>
+                    <li>5 November 1986</li>
+                    <li>Los Angeles,USA</li>
+                </ul>
+            </section>
+
+        </section>
+        <section class="what-i-do">
+            <h2 class="section-title">What I Do</h2>
+            <p class="description">I have more than 10 years experience building software for clients all over the
+                world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find
+                out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla Js</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, consequuntur!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.Js</p>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, dolore?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, incidunt.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, consectetur!</p>
+                </div>
+            </div>
 
         </section>
 
