--- a/index.html
+++ b/index.html
@@ -69,25 +69,98 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla Js</p>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, consequuntur!</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa,
+                        consequuntur!</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node.Js</p>
-                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, dolore?</p>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi,
+                        dolore?</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, incidunt.</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
+                        incidunt.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">MongoDB</p>
-                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, consectetur!</p>
+                    <p class="skill-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus,
+                        consectetur!</p>
                 </div>
             </div>
+        </section>
+        <!-- Resume Section -->
+        <section class="resume">
+            <h3 class="resume-section-title">A summary of My Resume</h3>
+            <div class="resume-contant">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class='title'>Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class='title'>Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class='title'>Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
 
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class='title'>Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description"> List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-item">
+                        <h4 class='title'>Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class='title'>Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+        <section class="connect">
+            <div class="section-title">
+
+            </div>
+            <div class="section-title">
+
+            </div>
         </section>
 
     </main>
